apps/base/matrix/connectivity-tester/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: connectivity-tester
    namespace: matrix
    labels:
        app: connectivity-tester
spec:
    selector:
        app: connectivity-tester
    ports:
        - port: 8080
          targetPort: api
          protocol: TCP
          name: api
        - port: 3000
          targetPort: web
          protocol: TCP
          name: web
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: connectivity-tester
    namespace: matrix
spec:
    parentRefs:
        - name: envoy-gateway
          namespace: envoy-gateway
    hostnames:
        - connectivity-tester.mtrnord.blog
    rules:
        - matches:
            - path:
                value: /api
                type: PathPrefix
          backendRefs:
            - name: connectivity-tester
              port: 8080
          timeouts:
            request: 240s
            backendRequest: 0s
        - backendRefs:
            - name: connectivity-tester
              port: 3000
          timeouts:
            request: 240s
            backendRequest: 0s
